log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: anttihanki/log-output:0.2.1
          volumeMounts:
          - name: config
            mountPath: /config
            readOnly: true

      volumes:
      - name: config
        configMap: 
          name: log-output-config
          items:
          - key: information.txt
            path: information.txt
