log_output/manifests/statefulset-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-db-svc
  namespace: exercises
  labels: 
    app: pingpong-db
spec:
  clusterIP: None
  selector:
    app: pingpong-db
  ports:
  - port: 5432
    name: postgres
  

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingpong-ss
  namespace: exercises
spec:
  selector:
    matchLabels:
      app: pingpong-db  
  serviceName: pingpong-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: pingpong-db
    spec:
      containers:
      - name: postgress
        image: postgres:16
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - name: data  
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
