log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: exercises
spec:
  parentRefs:
  - name: log-output-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: ping-pong-svc
      port: 2450
